# app/controllers/users_controller.rb
@@ -1,5 +1,5 @@
 class UsersController < ApplicationController
-  before_action :find_user, except: [:index]
+  before_action :find_user, except: %i[index create]
 
   def index
     @users = User.includes(:roles).ransack(params[:q]).result.page(params[:page])
@@ -8,6 +8,18 @@ class UsersController < ApplicationController
   def show
     authorize @user
     render 'show'
+  end
+
+  def create
+    authorize current_user
+    @user = User.new(user_create_params)
+
+    if @user.save
+      @user.reload
+      render :show, status: :created
+    else
+      render json: @order.errors, status: :unprocessable_entity
+    end
   end
 
   def update
@@ -20,12 +32,14 @@ class UsersController < ApplicationController
   end
 
   def add_roles
-    @user.add_roles(params[:roles])
+    authorize @user
+    @user.add_roles(role_params[:roles])
     render 'show'
   end
 
   def remove_roles
-    @user.remove_roles(params[:roles])
+    authorize @user
+    @user.remove_roles(role_params[:roles])
     render 'show'
   end
 
@@ -40,5 +54,13 @@ class UsersController < ApplicationController
   def user_update_params
     # Разрешаем только эти параметры для обновления
     params.permit(:firstname, :surname, :lastname, :document_number)
+  end
+
+  def role_params
+    params.permit(roles: [])
+  end
+
+  def user_create_params
+    params.permit(:firstname, :surname, :lastname, :document_number, :email, :password)
   end
 end
